--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,8 +11,8 @@ nav {
   color: white;
 }
 
-.row {
-  display: flex;
+.add-btn:hover {
+  color: green;
 }
 
 .nav-links {
@@ -34,7 +34,7 @@ nav {
   flex-flow: row wrap;
 }
 
-.item {
+.card {
   border: 2px solid black;
   border-radius: 5px;
   background-color: lightgrey;
